--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "comfyui_deepdeband"
 description = "ComyUI wrapper for RaymondLZhou/deepDeband image and video debanding"
 version = "0.0.1"
 license = {file = "LICENSE.md"}
+dependencies = ["torch>=1.4.0", "torchvision>=0.5.0", "dominate>=2.4.0", "visdom>=0.1.8.8"]
 
 [project.urls]
 Repository = "https://github.com/Anze-/ComfyUI_deepDeband"
